# Grocery-shop

./: README.md  amplify.yaml  amplify.yml  docker-compose.yml  package-lock.json  package.json  server.js  setup.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e35dd642acea_add_pinned_field_to_posts.py
backend/core/: config.py  dependencies.py  security.py
backend/db/: __init__.py  database.py  init_db.py  postgres.py
backend/models/: __init__.py  admin_user.py  post.py
backend/routers/: __init__.py  admin.py  auth.py  health.py  posts.py
backend/schemas/: __init__.py  common.py  post.py
backend/utils/: s3.py  slug.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: .env  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/posts/: PostCard.tsx  PostGrid.tsx  SearchFilters.tsx
frontend/src/components/ui/: button.tsx
frontend/src/config/: site.ts
frontend/src/pages/: About.tsx  CreatePost.tsx  Home.tsx  Index.tsx  Login.tsx  NotFound.tsx  PostDetail.tsx  Recipes.tsx  Tech.tsx
frontend/src/types/: index.ts
