[project]
name = "recipe-tech-backend"
version = "1.0.0"
description = "A simple content backend for recipes and tech projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "alembic>=1.16.5",
    "boto3>=1.40.23",
    "botocore>=1.40.23",
    "jmespath>=1.0.1",
    "mako>=1.3.10",
    "markupsafe>=3.0.2",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "s3transfer>=0.13.1",
    "urllib3>=2.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]